--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,4 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
-            - run: npm test
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+            - run: echo "hello world"
