--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build:
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: echo "hello world"
+      - run: echo "hello world"
