--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
 jobs:
   build:
+    docker: # Executor タイプです。他に machine、macOS という実行タイプを指定できます
+      - image: circleci/node:4.8.2 # プライマリコンテナです。このなかでジョブコマンドが実行されます      
     steps:
       - checkout
       - run: echo "hello world"
