--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@ jobs:
       - image: circleci/node:4.8.2 # プライマリコンテナです。このなかでジョブコマンドが実行されます      
     steps:
       - checkout
-      - run: echo "hello world"
+      - run: echo "hello world X"
