--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Project identification
 sonar.host.url=https://sonarcloud.io
 sonar.organization=kura2020
-sonar.projectKey=kura2020
+sonar.projectKey=kura2020_public2020
 sonar.projectName=public2020
 
 # Comma-separated paths to directories with sources (required)
