--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run: npm install typescript
       - sonarcloud/scan
       - run: echo "hello worldx"
-      - STATUS=$(curl -u $SONAR_TOKEN https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020  | jq -r '.projectStatus.status')
+      STATUS=$(curl -u $SONAR_TOKEN https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020  | jq -r '.projectStatus.status')
       - run: echo "Status of SonarQube task is ${STATUS}"
 
 
