--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run: echo "hello worldx"
       - run:
           command: |
-          STATUS=$(curl -u $SONAR_TOKEN https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020  | jq -r '.projectStatus.status')
+          STATUS=$(curl -u ${SONAR_TOKEN} https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020  | jq -r '.projectStatus.status')
           echo "Status of SonarQube task is ${STATUS}"
 
 
