--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - sonarcloud/scan
       - run: echo "hello worldx"
       - run:
-          command: STATUS=$(curl -u ${SONAR_TOKEN} https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020  | jq -r '.projectStatus.status')
+          command: STATUS=$(curl -u ${SONAR_TOKEN}: https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020  | jq -r '.projectStatus.status')
       - run: echo "Status of SonarQube task is ${STATUS}"
 
 
