--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - run: npm install typescript
       - sonarcloud/scan
       - run: echo "hello worldx"
+      - run: jq --version
       - run:
           command: STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020)
       - run: echo "Status of SonarQube task is ${STATUS}"
