--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,8 @@ jobs:
       - run: jq --version
       - run:
           command: |
-            curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020
-            STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020)
-            echo  STATUS
-            echo  ${STATUS}
-      - run: echo "Status of SonarQube task is ${STATUS}"
-
-
+            STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020)  | jq -r '.projectStatus.status')
+            echo "Status of SonarQube task is ${STATUS}"
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
 workflows:
