--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           command: |
             STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020 | jq -r '.projectStatus.status')
-            echo "Status of SonarQube task is ${STATUS} 
+            echo "Status of SonarQube task is ${STATUS} "
             if [ "${STATUS}" != "OK" ]; then
                 echo "Quality gate is not OK - exiting with error"
                 exit 1
