Update config.yml #2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
                 echo "Quality gate is not OK - exiting with error"
                 # exit 1
             fi
+      - run: pwd
       - run: npm install
+
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
 workflows:
