--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,19 +21,15 @@ jobs:
           command: npm install
           working_directory: ./helloworld-webpart
       - run: 
-          command: echo $PATH
-          environment: 
-            PATH: /home/circleci/project/helloworld-webpart/node_modules/.bin:$PATH
-      - run: 
-          command: gulp bundle --ship
+          command: 
+            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/bin:$PATH" >> $BASH_ENV
+            gulp bundle --ship
           working_directory: ./helloworld-webpart
-          environment: 
-            PATH: ./helloworld-webpart/node_modules/.bin:$PATH
       - run: 
-          command: gulp package-solution --ship
+          command:
+            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/bin:$PATH" >> $BASH_ENV
+            gulp package-solution --ship
           working_directory: ./helloworld-webpart
-          environment: 
-            PATH: ./helloworld-webpart/node_modules/.bin:$PATH
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
