Update config.yml #2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,14 +23,14 @@ jobs:
       - run: 
           name : gulp bundle --ship
           command: |
-            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/bin:$PATH" >> $BASH_ENV
+            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/,bin:$PATH" >> $BASH_ENV
             source $BASH_ENV
             gulp bundle --ship
           working_directory: ./helloworld-webpart
       - run: 
           name : gulp package-solution --ship
           command: |
-            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/bin:$PATH" >> $BASH_ENV
+            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/.bin:$PATH" >> $BASH_ENV
             source $BASH_ENV
             gulp package-solution --ship
           working_directory: ./helloworld-webpart
