--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,23 +17,41 @@ jobs:
                 echo "Quality gate is not OK - exiting with error"
                 # exit 1
             fi
+      
+      # Download and cache dependencies
       - run: 
           command: npm install
           working_directory: ./helloworld-webpart
+      
+      - run: sudo npm link gulp
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run gulp
+      - run: mkdir /tmp/artifacts
+      
       - run: 
-          name : gulp bundle --ship
-          command: |
-            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/.bin:$PATH" >> $BASH_ENV
-            source $BASH_ENV
-            gulp bundle --ship
+        #  name : gulp bundle --ship
+        #  command: |
+        #    echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/.bin:$PATH" >> $BASH_ENV
+        #    source $BASH_ENV
+        #    gulp bundle --ship
+          command: gulp bundle --ship
           working_directory: ./helloworld-webpart
       - run: 
-          name : gulp package-solution --ship
-          command: |
-            echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/.bin:$PATH" >> $BASH_ENV
-            source $BASH_ENV
-            gulp package-solution --ship
+        #  name : gulp package-solution --ship
+        #  command: |
+        #    echo "export PATH=/home/circleci/project/helloworld-webpart/node_modules/.bin:$PATH" >> $BASH_ENV
+        #    source $BASH_ENV
+        #    gulp package-solution --ship
+          command: gulp package-solution --ship
           working_directory: ./helloworld-webpart
+
+      - store_artifacts:
+          path: ./helloworld-webpart/sharepoint/solution/helloworld-webpart.sppkg
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
