--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,16 @@ jobs:
       - run:
           command: npm install @pnp/office365-cli
           working_directory: ./helloworld-webpart
+      
+      # ログイン・デプロイを実行
+      - run:
+          command: o365 login -t password -u $(USERNAME) -p $(PASSWORD)
+          working_directory: ./helloworld-webpart
+
+      - run:
+          command: o365 spo app add -p ./helloworld-webpart/sharepoint/solution/helloworld-webpart.sppkg --overwrite
+      - run:
+          command: o365 spo app deploy --name helloworld-webpart.sppkg
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
