--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       
       # ログイン・デプロイを実行
       - run:
-          command: o365 login -t password -u $(USERNAME) -p $(PASSWORD)
+          command: o365 login -t password -u $($USERNAME) -p $($PASSWORD)
           working_directory: ./helloworld-webpart
 
       - run:
