--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,11 @@ jobs:
           command: npm install @pnp/office365-cli
           working_directory: ./helloworld-webpart
       
+      -run: sudo npm link office365-cli
+      
       # ログイン・デプロイを実行
+      - run:
+          command: o365 login -t password -u $($USERNAME) -p $($PASSWORD)
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
