--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,7 @@ jobs:
       
       # ログイン・デプロイを実行
       - run:
-          command:
-            echo "${USERNAME}"
+          command: o365 login -t password -u $USERNAME -p $PASSWORD
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
