--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,15 @@ jobs:
       - checkout
       - run: npm install typescript
       - sonarcloud/scan
-      - run: echo "hello worldx"
-      - run: jq --version
+      #- run: echo "hello worldx"
+      #- run: jq --version
       - run:
           command: |
             STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020 | jq -r '.projectStatus.status')
             echo "Status of SonarQube task is ${STATUS} "
             if [ "${STATUS}" != "OK" ]; then
                 echo "Quality gate is not OK - exiting with error"
-                # exit 1
+                exit 1
             fi
       
       # Download and cache dependencies
