--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,4 +68,7 @@ workflows:
     jobs:
       - build:
           context: sonarcloud
+          branches:
+            only:
+              - main
           
