--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ workflows:
     jobs:
       - build:
           context: sonarcloud
-          branches:
-            only:
-              - main
+          filters:
+            branches:
+              only: main
           
