--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,5 +70,5 @@ workflows:
           context: sonarcloud
           filters:
             branches:
-              only: main
+              only: master
           
