--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,5 @@ jobs:
     steps:
       # Commands are run in a Windows virtual machine environment
       - checkout
-      - run: Write-Host 'Hello, Windows'
+      - run: pwd
+      - run: dir
