--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,11 @@ jobs:
     steps:
       # Commands are run in a Windows virtual machine environment
       - checkout
-      - run: pwd
-      - run: dir
+
+workflows:
+  main:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: test-ps
