--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,5 +10,10 @@ jobs:
       size: "medium" # resource class, can be "medium", "large", "xlarge", "2xlarge", defaults to "medium" if not specified
 
     steps:
-      # Commands are run in a Windows virtual machine environment
       - checkout
+      - run:            
+         command: pwd
+         shell: powershell.exe
+      - run:
+         command: dir
+         shell: cmd.exe
