--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,8 @@ jobs:
       - run:
          command: curl --version
          shell: cmd.exe
-      - run: Install-Package Microsoft.SharePointOnline.CSOM -Version 16.1.20211.12000
+
+      # install SharePoint and Project Client Object Model libraries
+      # https://www.nuget.org/packages/Microsoft.SharePointOnline.CSOM/
+      - run: Install-Package -Name Microsoft.SharePointOnline.CSOM -MinimumVersion 16.1.20211.12000
       
