--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,5 @@ jobs:
 
       # install SharePoint and Project Client Object Model libraries
       # https://www.nuget.org/packages/Microsoft.SharePointOnline.CSOM/
-      - run: Install-Package -Name Microsoft.SharePointOnline.CSOM -MinimumVersion 16.1.20211.12000
+      - run: nuget install Microsoft.SharePointOnline.CSOM
       
