--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,5 @@ jobs:
 
       # upload files to SharePoint Document Library
       - run:
-        - command: |
-            cd javascript/tools
-            .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library テスト用ライブラリ -username $USERNAME -password $PASSWORD -path ..\files                                                                                                               
-      
+          command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username $USERNAME -password $PASSWORD -path ..\files
+          working_directory: .\javascript\tools
