--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # install SharePoint and Project Client Object Model libraries
       # https://www.nuget.org/packages/Microsoft.SharePointOnline.CSOM/
       #- run: nuget install Microsoft.SharePointOnline.CSOM
-      - run: Install-Module -Name SharePointOnline.CSOM -RequiredVersion -Force
+      - run: Install-Module -Name SharePointOnline.CSOM -Force
       - run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
       #- run: Install-Module -Name Microsoft.Online.SharePoint.PowerShell -Force
       #- run: Get-Module -Name Microsoft.Online.SharePoint.PowerShell -ListAvailable | Select Name,Version
