--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,13 @@ jobs:
       # install SharePoint and Project Client Object Model libraries
       # https://www.nuget.org/packages/Microsoft.SharePointOnline.CSOM/
       #- run: nuget install Microsoft.SharePointOnline.CSOM
-      - run: Install-Module -Name SharePointOnline.CSOM -Force
+      - run: Install-Module -Name SharePointOnline.CSOM
+       -Force
       - run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
       #- run: Install-Module -Name Microsoft.Online.SharePoint.PowerShell -Force
       #- run: Get-Module -Name Microsoft.Online.SharePoint.PowerShell -ListAvailable | Select Name,Version
 
-      - run: dir C:\Users\circleci\project\Microsoft.SharePointOnline.CSOM.16.1.20211.12000\lib
+      #- run: dir C:\Users\circleci\project\Microsoft.SharePointOnline.CSOM.16.1.20211.12000\lib
       # upload files to SharePoint Document Library
       - run:
           command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username kura@spkuratest.onmicrosoft.com -password kkuurraa@20 -path C:\Users\circleci\project\javascript\files
