--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,13 @@ jobs:
 
       # install SharePoint and Project Client Object Model libraries
       # https://www.nuget.org/packages/Microsoft.SharePointOnline.CSOM/
-      - run: nuget install Microsoft.SharePointOnline.CSOM
+      #- run: nuget install Microsoft.SharePointOnline.CSOM
       # https://www.powershellgallery.com/packages/SharePointOnline.CSOM/0.1.0
-      #- run: Install-Module -Name SharePointOnline.CSOM -Force
-      #- run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
+      - run: Install-Module -Name SharePointOnline.CSOM -Force
+      - run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
       
       #- run: dir C:\Users\circleci\project\Microsoft.SharePointOnline.CSOM.16.1.20211.12000\lib
       # upload files to SharePoint Document Library
       - run:
-          command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username kura@spkuratest.onmicrosoft.com -password kkuurraa@20 -path C:\Users\circleci\project\javascript\files
-          working_directory: .\javascript\tools
+          command: C:\Users\circleci\project\javascript\tools\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username kura@spkuratest.onmicrosoft.com -password kkuurraa@20 -path C:\Users\circleci\project\javascript\files
+      #    working_directory: .\javascript\tools
