--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
       
       # upload files to SharePoint Document Library
-      - run: Write-Host "${USERNAME}"
+      - run: Write-Host $env:USERNAME
       - run:
           command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username ${USERNAME} -password ${PASSWORD} -path C:\Users\circleci\project\javascript\files
           working_directory: .\javascript\tools
