--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,8 @@ jobs:
       - run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
       
       # upload files to SharePoint Document Library
-      - run: Get-ChildItem env:
-      - run: Write-Host $env:USERNAME
       - run:
-          command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username ${USERNAME} -password ${PASSWORD} -path C:\Users\circleci\project\javascript\files
+          command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username $env:USERNAME -password $env:PASSWORD -path C:\Users\circleci\project\javascript\files
           working_directory: .\javascript\tools
 
 workflows:
