--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: 
           command: npm install
           working_directory: .\helloworld-webpart
-      - run: npm install -g n
+      #- run: npm install -g n
       - run: sudo n 10.19.0
       - run:
           command: node -v
