--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,14 +29,15 @@ jobs:
       - run: 
           command: npm install
           working_directory: .\helloworld-webpart
-      #- run: npm install -g 
-      - run: Start-Process powershell.exe -Verb runas "sudo n 10.19.0"
       - run:
-          command: node -v
-          shell: cmd.exe
-      - run: npm install gulp --global
-      - run:
-          command: gulp -version
+          command: |
+            npm install -g n
+            sudo n 10.19.0
+            npm version
+      - run: 
+          command: | 
+            npm install gulp --global
+            gulp -version
 
       # run gulp   
       - run: 
