--- a/helloworld-webpart/package.json
+++ b/helloworld-webpart/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "lib/index.js",
   "engines": {
-    "node": "10.x"
+    "node": ">=0.10.0"
   },
   "scripts": {
     "build": "gulp bundle",
