--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1 # Use version 2.1 to enable orb usage.
 
 orbs:
   win: circleci/windows@2.2.0 # The Windows orb give you everything you need to start using the Windows executor.
-  sonarcloud: sonarsource/sonarcloud@1.0.1
+  #sonarcloud: sonarsource/sonarcloud@1.0.1
 
 jobs:
   build: # name of your job
