--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,12 @@ jobs:
           working_directory: .\helloworld-webpart
       - run: npm version
 
-      - run: npm uninstall -g node
-      - run: npm install node@10.19.0
+      - run: 
+          command: |
+            npm uninstall node
+            npm install node@10.19.0
+            node -v
+          working_directory: .\helloworld-webpart
 
       - run: npm install gulp --global
       - run: gulp -version
